@@ -1,12 +1,12 @@
 numpy
-rcsb.utils.io >= 0.52
-rcsb.db >= 0.957
-rcsb.utils.chemref >= 0.31
-rcsb.utils.citation >= 0.13
-rcsb.utils.config >= 0.30
-rcsb.utils.ec >= 0.16
-rcsb.utils.go >= 0.16
-rcsb.utils.seq >= 0.32
-rcsb.utils.struct >= 0.23
-rcsb.utils.taxonomy >= 0.26
+rcsb.utils.io >= 0.53
+rcsb.db >= 0.958
+rcsb.utils.chemref >= 0.33
+rcsb.utils.citation >= 0.15
+rcsb.utils.config >= 0.33
+rcsb.utils.ec >= 0.21
+rcsb.utils.go >= 0.17
+rcsb.utils.seq >= 0.36
+rcsb.utils.struct >= 0.24
+rcsb.utils.taxonomy >= 0.27
 statistics; python_version < "3.0"
