@@ -30,3 +30,4 @@
 29-Jan-2020 V0.38 Update dependencies for GO and Drugbank fixes
 30-Jan-2020 V0.39 Update dependencies structure domain utilities
  2-Feb-2020 V0.40 Add test fixtures to measure memory usage, streamline some extractions, suppress some diagnostic reporting
+ 4-Feb-2020 V0.41 Update dependencies to support split configuration
